<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary">

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        style="?android:indeterminateProgressStyle"
        android:id="@+id/pb_day"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tb_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu_main"
        app:titleTextAppearance="@style/ToolbarCustom"
        app:title="@string/city_test"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/colorOnPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tl_main"
        app:layout_constraintTop_toBottomOf="@id/tb_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorOnPrimary"/>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/vp_main"
        app:layout_constraintTop_toBottomOf="@id/tl_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="?attr/colorOnPrimary"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_main_error_request"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tl_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/error_request_permissions"
        android:layout_weight="10"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_day_error_internet_connection"
        app:layout_constraintTop_toBottomOf="@id/tl_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:text="@string/error_internet_connection"
        android:layout_weight="10"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/roboto_condensed_bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_day_try_again"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/roboto_condensed_bold"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="@string/try_again"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_day_error_internet_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_text_white"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>