<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cv_day_cont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/iv_day_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background"
            android:layout_margin="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_day_temp"
            app:layout_constraintStart_toStartOf="@id/iv_day_main"
            app:layout_constraintEnd_toEndOf="@id/iv_day_main"
            app:layout_constraintTop_toBottomOf="@id/iv_day_main"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/roboto_condensed_regular"
            tools:text="18°C"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_day_temp"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="36dp"
            android:text="@string/rh"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rh_value"
            app:layout_constraintTop_toTopOf="@id/tv_rh"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="84dp"
            tools:text="90%"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wind_spd"
            app:layout_constraintStart_toStartOf="@id/tv_rh"
            app:layout_constraintTop_toBottomOf="@id/tv_rh"
            android:layout_marginTop="24dp"
            android:text="@string/wind_speed"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wind_spd_value"
            app:layout_constraintStart_toStartOf="@id/tv_rh_value"
            app:layout_constraintTop_toBottomOf="@id/tv_rh_value"
            tools:text="70%"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wind_dir"
            app:layout_constraintStart_toStartOf="@id/tv_rh"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_spd"
            android:layout_marginTop="24dp"
            android:text="@string/wind_dir"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wind_dir_value"
            app:layout_constraintStart_toStartOf="@id/tv_wind_spd_value"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_spd_value"
            tools:text="14 m/h"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_clouds"
            app:layout_constraintStart_toStartOf="@id/tv_rh"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_dir"
            android:layout_marginTop="24dp"
            android:text="@string/cloud_cov"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_clouds_value"
            app:layout_constraintStart_toStartOf="@id/tv_wind_dir_value"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_dir_value"
            tools:text="40%"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pres"
            app:layout_constraintStart_toStartOf="@id/tv_rh"
            app:layout_constraintTop_toBottomOf="@id/tv_clouds"
            android:layout_marginTop="24dp"
            android:text="@string/pressure"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pres_value"
            app:layout_constraintStart_toStartOf="@id/tv_clouds_value"
            app:layout_constraintTop_toBottomOf="@id/tv_clouds_value"
            tools:text="1000 mBar"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_uv"
            app:layout_constraintStart_toStartOf="@id/tv_rh"
            app:layout_constraintTop_toBottomOf="@id/tv_pres"
            android:layout_marginTop="24dp"
            android:text="@string/uv"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_uv_value"
            app:layout_constraintStart_toStartOf="@id/tv_pres_value"
            app:layout_constraintTop_toBottomOf="@id/tv_pres_value"
            tools:text="0"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_condensed_light"
            android:textSize="20sp"
            android:textColor="?attr/colorOnPrimary"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>